--- a/index.html
+++ b/index.html
@@ -105,6 +105,7 @@
                       </div>   
                       </div>
                       </div>  
+                    <p> open code source by <a href="https://github.com/Khalinadenae/Weather-App"> Khalina Boyce </a></p>
    
               <script src="script.js"> </script>  
 </html>
