Styled GitHub link

--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
                       </div>   
                       </div>
                       </div>  
-                    <p> open code source by <a href="https://github.com/Khalinadenae/Weather-App"> Khalina Boyce </a></p>
+                    <p class="git"> open code source by <a href="https://github.com/Khalinadenae/Weather-App" target="_blank"> Khalina Boyce </a></p>
    
               <script src="script.js"> </script>  
 </html>
