--- a/index.html
+++ b/index.html
@@ -26,9 +26,12 @@
   </head>
   <body>
     <div class="container">
-
+<form id="search-form">
+         <input type="text" class="search" placeholder="Enter city" id="search-input"/>
+      <input type="submit" class="btn btn-light" value="search" /> <span>
+    <button type="button" class="btn btn-light"> <i class="fa-solid fa-map-pin"> </i></button>  </span>
   <div class="row justify-content-center">
-
+</form>
     <div class="col-4" id="location">
           <h1> Dumfries </h1> 
          <h2> Saturday, January 29th</h2> 
@@ -37,9 +40,10 @@
         <h3 id="tempCF" >  60 F° </h3>
        <h7> Mostly cloudy </h7>
        <i class="fa-solid fa-cloud"></i>
+       <br>
+  <button id="tempF"> F ° </button> 
+           <button id="tempC"> C° </button>
 
- 
-          
     </div>
 
     <div class="col-4" id="description">
@@ -57,7 +61,7 @@
     <tr>
       <th scope="row no-gutters"> </th>
         <td> Friday</td>
-      <td><em>67</em> /57 </td>
+      <td><em>67°</em> /57°</td>
       <td>Sunny </td>
     </tr>
   </tr>
@@ -65,7 +69,7 @@
     <tr>
       <th scope="row"> </th>
         <td> Friday</td>
-      <td><em>67</em>/ 57</td>
+      <td><em>67°</em>/ 57°</td>
       <td>Cloudy </td>
     
       </tr>
@@ -73,21 +77,21 @@
     </tr>
       <th scope="row"> </th>
         <td> Friday</td>
-      <td><em>67</em>/ 57</td>
+      <td><em>67°</em>/ 57°</td>
       <td>Cloudy </td>
   
       </tr>
   </tr>
           <th scope="row"> </th>
             <td> Friday</td>
-      <td><em>67</em>/ 57</td>
+      <td><em>67°</em>/ 57°</td>
       <td>Cloudy </td>
   
           </tr>
 </tr>
           <th scope="row"> </th>
             <td> Friday</td>
-      <td><em>67</em> /57</td>
+      <td><em>67°</em> /57°</td>
       <td>Cloudy </td>
   
           </tr>
