--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
     <script src="https://kit.fontawesome.com/daeac0eefc.js" crossorigin="anonymous"></script>
 
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link rel="preconnect" href="https://fonts.googleapis.com">
