Updated html tags to link with JS

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <div class="col-4" id="description">
          <ul>
-       <li  id="max-temperature"> High 59° / <span id="min-temperature"> Low 45 ° </li> 
+      <span> <li  id="max-temperature"> High 59°  </li> <li id="min-temperature"> Low 45 ° </li> </span>
        <li id="feels-like" > <em> FEELS LIKE 50° </em> </li>
        <li id="humidity"> Humidity 35% </li>
         <li id="wind-speed"> Wind 18mph </li>
