Added the relevant icon from the API

--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
          <h4> 5:52 </h4> 
          <br> 
         <h3 id="tempCF" >  60 F° </h3>
-       <h7> Mostly cloudy </h7>
-       <i class="fa-solid fa-cloud"></i>
+       <h7 id="description"> Mostly cloudy </h7>
+   
+       <img src="http://openweathermap.org/img/wn/10d@2x.png" alt="" id="icon">
+
        <br>
   <button id="tempF"> F ° </button> 
            <button id="tempC"> C° </button>
 
     </div>
 
-    <div class="col-4" id="description">
+    <div class="col-4" >
          <ul>
       <span> <li  id="max-temperature"> High 59°  </li> <li id="min-temperature"> Low 45 ° </li> </span>
        <li id="feels-like" > <em> FEELS LIKE 50° </em> </li>
