Styled temperature link

--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
         <h3 id="tempCF" >  60  </h3>
 
 <span class="units">
-  <a href="#" id="celsius-link" class="active"> C </a> 
-  <a href="#" id="fahrenheit-link"> F </a>
+ <button  class="btn btn-light"> <a href="#" id="celsius-link" class="active"> C </a> </button>
+  <button  class="btn btn-light"> <a href="#" id="fahrenheit-link"> F </a> </button>
 
 </span>
 
