JS template/  API integration for weather forecast
function - "showForecast"

--- a/index.html
+++ b/index.html
@@ -83,29 +83,33 @@
     <div class="col">
  <p>Next 5 days </p>
 
-
+<div class="weather" id="forecast">
 <table class="table table-sm ">
 <table class="table table-hover">
-
   <tbody>
     <tr>
       <th scope="row no-gutters"> </th>
-        <td> Friday</td>
-      <td><em>67°</em> /57°</td>
-      <td>Sunny </td>
+      <div class="forecast-temp">  <td> <span class="max"> 68° </span> /  60° <span class="min"></span></td>  </div>
+      <div class="forecast-date">   <td> Friday</td> </div>
+ <div class="temp-description"> <td>Sunny </td>  </div>
     </tr>
   </tr>
-  
+</div>
+
+
+
     <tr>
       <th scope="row"> </th>
+      <div class="forecast-date">
         <td> Friday</td>
-      <td><em>67°</em>/ 57°</td>
+    </div>
+    <div class="forecast-temperature">
+    <span class="max"> <td><em>67°</em>  </span> <span class="min"> / 57°</td> </span>
+  </div>
       <td>Cloudy </td>
-    
-      </tr>
-      
+      </tr>   
     </tr>
-      <th scope="row"> </th>
+      <th scope="row" > </th>
         <td> Friday</td>
       <td><em>67°</em>/ 57°</td>
       <td>Cloudy </td>
