created showForecast function
integrated API for 5 day forecast

--- a/index.html
+++ b/index.html
@@ -35,10 +35,7 @@
     <button type="button" id="current-location-button" class="btn btn-light"> <i class="fa-solid fa-map-pin"> </i></button>  </span>
   <div class="row justify-content-center">
 </form>
-
 </div>
-
- 
   <div class="row align-items-center">
     <div class="col" id="location">
 
@@ -89,7 +86,7 @@
   <tbody>
     <tr>
       <th scope="row no-gutters"> </th>
-      <div class="forecast-temp">  <td> <span class="max"> 68° </span> /  60° <span class="min"></span></td>  </div>
+      <div class="forecast-temp">  <td> <span class="max"> 68° </span>  60° <span class="min"></span></td>  </div>
       <div class="forecast-date">   <td> Friday</td> </div>
  <div class="temp-description"> <td>Sunny </td>  </div>
     </tr>
