--- a/index.html
+++ b/index.html
@@ -86,47 +86,17 @@
   <tbody>
     <tr>
       <th scope="row no-gutters"> </th>
-      <div class="forecast-temp">  <td> <span class="max"> 68° </span>  60° <span class="min"></span></td>  </div>
-      <div class="forecast-date">   <td> Friday</td> </div>
- <div class="temp-description"> <td>Sunny </td>  </div>
+     
+      <div class="forecast-date">   <td> Next 5 Days</td> </div>
+       <div class="forecast-temp">  <td> <span class="max">  </span>   <span class="min"></span></td>  </div>
+ <div class="temp-description"> <td> </td>  </div>
     </tr>
   </tr>
 </div>
 
 
 
-    <tr>
-      <th scope="row"> </th>
-      <div class="forecast-date">
-        <td> Friday</td>
-    </div>
-    <div class="forecast-temperature">
-    <span class="max"> <td><em>67°</em>  </span> <span class="min"> / 57°</td> </span>
-  </div>
-      <td>Cloudy </td>
-      </tr>   
-    </tr>
-      <th scope="row" > </th>
-        <td> Friday</td>
-      <td><em>67°</em>/ 57°</td>
-      <td>Cloudy </td>
-  
-      </tr>
-  </tr>
-          <th scope="row"> </th>
-            <td> Friday</td>
-      <td><em>67°</em>/ 57°</td>
-      <td>Cloudy </td>
-  
-          </tr>
-</tr>
-          <th scope="row"> </th>
-            <td> Friday</td>
-      <td><em>67°</em> /57°</td>
-      <td>Cloudy </td>
-  
-          </tr>
-</tr>
+   
   </tbody>
 </table>
 </table>
