Added Fahrenheit degree

--- a/index.html
+++ b/index.html
@@ -41,13 +41,9 @@
 
 
       
-        <h3 id="tempCF" >  60  </h3>
+        <h3 id="tempCF" >  60 °F </h3>
 
-<span class="units">
- <button  class="btn btn-light"> <a href="#" id="celsius-link" class="active"> C </a> </button>
-  <button  class="btn btn-light"> <a href="#" id="fahrenheit-link"> F </a> </button>
 
-</span>
 
 
 
