Geo location feature
function retrieve position

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div class="col">
 
-  <h1> Dumfries </h1> 
+  <h1 id="city"> Dumfries </h1> 
          <h2> Saturday, January 29th</h2> 
          <h4> 5:52 </h4> 
          <br> 
